--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "google-map-react": "^2.1.10",
     "react": "^18.1.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "sass": "^1.52.3",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
